--- a/src/Sinedo/Views/Index/Index.en-US.resx
+++ b/src/Sinedo/Views/Index/Index.en-US.resx
@@ -389,4 +389,8 @@
    <value>Hard disk usage</value>
    <comment/>
  </data>
+ <data name="FolderNotFound" xml:space="preserve">
+   <value>The folder not found.</value>
+   <comment/>
+ </data>
 </root>
