--- a/src/Sinedo/Views/Index/Change.en-US.resx
+++ b/src/Sinedo/Views/Index/Change.en-US.resx
@@ -145,4 +145,8 @@
     <value>The password entered does not match the policy.</value>
     <comment/>
   </data>
+  <data name="Abort" xml:space="preserve">
+    <value>Abort</value>
+    <comment/>
+  </data>
 </root>
