--- a/src/Sinedo/Views/Shared/Layout_Settings.de-DE.resx
+++ b/src/Sinedo/Views/Shared/Layout_Settings.de-DE.resx
@@ -118,87 +118,19 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <data name="Title" xml:space="preserve">
-    <value>Change settings</value>
+    <value>Einstellungen</value>
     <comment/>
   </data>
-  <data name="Save" xml:space="preserve">
-    <value>Save Settings</value>
+  <data name="Downloads" xml:space="preserve">
+    <value>Downloads</value>
     <comment/>
   </data>
-  <data name="SerivceCredentials" xml:space="preserve">
-    <value>Login data for the Rapidgator service:</value>
+  <data name="Accounts" xml:space="preserve">
+    <value>Konten</value>
     <comment/>
   </data>
-  <data name="Username" xml:space="preserve">
-    <value>Username</value>
-    <comment/>
-  </data>
-  <data name="Password" xml:space="preserve">
-    <value>Password</value>
-    <comment/>
-  </data>
-  <data name="SetupDescription" xml:space="preserve">
-    <value>Specify the speed of your Internet connection and the number of simultaneous downloads:</value>
-    <comment/>
-  </data>
-  <data name="InternetConnection" xml:space="preserve">
-    <value>Internet connection</value>
-    <comment/>
-  </data>
-  <data name="Option16" xml:space="preserve">
-    <value>16 MBit/s</value>
-    <comment/>
-  </data>
-  <data name="Option50" xml:space="preserve">
-    <value>50 MBit/s</value>
-    <comment/>
-  </data>
-  <data name="Option100" xml:space="preserve">
-    <value>100 MBit/s</value>
-    <comment/>
-  </data>
-  <data name="Option250" xml:space="preserve">
-    <value>250 MBit/s</value>
-    <comment/>
-  </data>
-  <data name="Option1000" xml:space="preserve">
-    <value>1 GBit/s</value>
-    <comment/>
-  </data>
-  <data name="Option10000" xml:space="preserve">
-    <value>10 GBit/s</value>
-    <comment/>
-  </data>
-  <data name="ConcurrentDownloads" xml:space="preserve">
-    <value>Concurrent downloads</value>
-    <comment/>
-  </data>
-  <data name="DownloadDescription" xml:space="preserve">
-    <value>Specify a folder where the files will be downloaded:</value>
-    <comment/>
-  </data>
-  <data name="ExtractDescription" xml:space="preserve">
-    <value>Specify a folder where the files will be extracted:</value>
-    <comment/>
-  </data>
-  <data name="ExtractFiles" xml:space="preserve">
-    <value>Extracted files</value>
-    <comment/>
-  </data>
-  <data name="ArchiveCheckbox" xml:space="preserve">
-    <value>Extract RAR archives after download?</value>
-    <comment/>
-  </data>
-  <data name="SavePath" xml:space="preserve">
-    <value>Location</value>
-    <comment/>
-  </data>
-  <data name="SaveError" xml:space="preserve">
-    <value>The settings could not be saved.</value>
-    <comment/>
-  </data>
-  <data name="Abort" xml:space="preserve">
-    <value>Abort</value>
+  <data name="Server" xml:space="preserve">
+    <value>Server</value>
     <comment/>
   </data>
 </root>
